Fix logo z-index top of site

--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -209,7 +209,6 @@
 
 				.logo {
 					display: inline-block;
-					z-index: 9;
 					position: relative;
 
 					@media screen and (min-width: 1200px) {
